Changelog
=========

1.0b5 (Unreleased)
------------------


1.0b4 (2011-08-31)
------------------

    - Add autoinclude entry targetting ``transmogrify`` to provide
      ``mr.migrator`` support. This means folks can list this package
      in their ``mr.migrator`` sections (in buildout.cfg) and mr.migrator
      will load its ZCML. 
      [aclark]


1.0b3 (2011-03-01)
------------------

    - Added option to specify item's portal_type inside metadata.csv.
      [zupo]


1.0b2 (2010-08-18)
------------------

    - Added option 'strict' that will make transmogrify.filesystem break
      if it finds a row of data in Metadata CSV which field-count does not match
      field-count of the first row in the CSV file.
      [zupo]

    - Added option 'delimiter' so you can choose a character that delimits
      your Metadata CSV file.
      [zupo]
    
    - Fixed test_empty_directory by ignoring .svn and similar directories.
      [zupo]

    - Reverted toutpt's change since resolvePackageReferenceOrFile is now 
      available in a released version of transmogrifier.
      [zupo]

    - update api resolvePackageReferenceOrFile -> resolvePackageReference
      [toutpt]

1.0b1 (2009-12-30)
------------------

    - Initial release
      [optilude]
